# web-crawler

./: README.md  crawl-settings.example.json  crawl-settings.json  pyproject.toml
crawl-output/mtx.sg/: home.md
crawl-output/mtx.sg/home/: agenda.md  connect.md  exhibition-overview.md  exhibitor-advisory.md  privacy-policy.md  speakers.md  ticketing-tnc.md
crawl-output/mtx.sg/home/exhibition-overview/: exhibitors-listing.md
crawler/: __init__.py  __main__.py  md_crawler.py  paths.py
